fix qr alignment

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -308,5 +308,6 @@ input[type=file]::file-selector-button {
 
   #qrdiv {
     width: 75%;
+    align-content: center;
   }
 }
